# titanic-mlops

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DOCKER.md  Dockerfile  README.md  main.py  pyproject.toml
app/: main.py  schemas.py
configs/: xgb-depth8.yaml  xgb.yaml
models/: metrics.json
scripts/: export_production_model.py  predict_from_registry.py
src/: config.py  preprocessing.py  train.py
